--- a/app/tmpl/main.tmpl
+++ b/app/tmpl/main.tmpl
@@ -71,7 +71,8 @@
     P();
     dispatch.on("input", function(d) {
       //dispatch.call("update",this,N.toolsParseRegions(d)))
-      P.layout().eventHub.emit("update", N.toolsParseRegions(d)) //for coding message from socket.io.
+      //TODO
+      //P.layout().eventHub.emit("update", N.toolsParseRegions(d)) //for coding message from socket.io.
     })
 
 
