mv to sand.min.js

--- a/app/tmpl/main.tmpl
+++ b/app/tmpl/main.tmpl
@@ -4,7 +4,7 @@
 <head>
   <title id = "title"></title>
   {{template "lib"}}
-  <script type="text/javascript" src="/web/lib/sand.js"></script>
+  <script type="text/javascript" src="/web/lib/sand.min.js"></script>
   {{range .Libs}}
   <script type="text/javascript" src="{{.}}"></script>
   {{end}}
