--- a/app/templates/menu.tmpl
+++ b/app/templates/menu.tmpl
@@ -14,6 +14,9 @@
         <ul id="renders">
         </ul>
       </div>
+      <div class="note">
+        Welcome! Click me to begin!
+      </div>
     </li>
     <li><span id="fixedToggle" class="glyphicon glyphicon-pushpin" title="hide panel header"></li>
 
