--- a/app/tmpl/home.tmpl
+++ b/app/tmpl/home.tmpl
@@ -4,10 +4,8 @@
 <head>
   <title>{{template "title"}}</title>
   {{template "lib"}}
-  <script type="text/javascript" src="/web/lib/sand.js"></script>
-  <script type="text/javascript" src="/web/lib/snow.js"></script>
+  <script type="text/javascript" src="/web/lib/sand.min.js"></script>
   {{template "css"}}
-  <link rel="stylesheet" href="/web/style/snow.css">
   <link rel="stylesheet" href="/web/style/sand.base.css">
   <style>
     .panel {
