--- a/app/tmpl/main.tmpl
+++ b/app/tmpl/main.tmpl
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title id = "title"></title>
+  <title id = "title">Home</title>
   {{template "lib"}}
   <script type="text/javascript" src="/web/lib/sand.min.js"></script>
   {{range .Libs}}
@@ -105,6 +105,7 @@
     }
 
     if (cfg && cfg != "continue") {
+      $(".menu .note").hide()
       d3.json(server + cfg, function(error, config) {
         if (config[-1] || config["states"]) { //windows format
           dispatch.call("initWindows", this, config)
@@ -113,6 +114,9 @@
         }
       })
     } else if (!cfg) {
+      if (win=="main"){
+        $(".menu .note").show()
+      }
       dispatch.call("initPanels", this, emptyCfg)
     }
 
