--- a/app/web/style/sand.base.css
+++ b/app/web/style/sand.base.css
@@ -103,7 +103,17 @@ body {
 .ft-red {
     color: #9d0000;
 }
-
+.note {
+    position: absolute;
+    width: 320px;
+    display: none;
+    z-index: 922;
+    border-radius: 6px;
+    border: 1px solid #5F5F5F;
+    padding: 5px 0;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+    background-color: #F6F5D7;
+}
 
 /* start frame */
 .frame {
