--- a/app/tmpl/main.tmpl
+++ b/app/tmpl/main.tmpl
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title id = "title">Home</title>
+  <title id = "title">{{.Appname}}</title>
   {{template "lib"}}
   <script type="text/javascript" src="/web/lib/sand.min.js"></script>
   {{range .Libs}}
