--- a/app/web/style/sand.base.css
+++ b/app/web/style/sand.base.css
@@ -73,6 +73,9 @@ body {
     overflow: hidden;
     font-family: Helvetica;
 }
+.menu li {
+  padding-right:5px;
+}
 .fn-left {
     float: left;
 }
