rm ext win button in ext window

--- a/app/tmpl/main.tmpl
+++ b/app/tmpl/main.tmpl
@@ -47,6 +47,7 @@
     win = S.toolsGetUrlPara("win") || "main"
     if (win=="ext") {
       $("#myNavRight").hide() //hide session ctrl
+      $("#openExt").hide()
       $("#title").text("Extend Window")
     }
     var theme = S.initTheme();
