--- a/app/templates/menu.tmpl
+++ b/app/templates/menu.tmpl
@@ -45,7 +45,7 @@
             </u1>
         </div>
       </li>
-    <li style="padding-right:0px" title="Login with google"><span id="login" class="glyphicon glyphicon-log-in" ></li>
+    <li style="padding-right:0px" title="Login with google" id="menuUser"><span id="login" class="glyphicon glyphicon-log-in" ></li>
     <li style="padding-right:0px"><image id="picture" style="height:18px;width:18px;margin:7px 4px"></image>
     <div class="frame">
       <ul>
