fix pub d3.json

--- a/app/tmpl/pub.tmpl
+++ b/app/tmpl/pub.tmpl
@@ -31,7 +31,7 @@
     var sheetId = S.toolsGetUrlPara("sheetid") || "1sl7ZkGWKX3Sx2yNLPpYNwVhBklVMXucVs4Ht9ukKVhw" //TODO Get SheetTitle and SheetId for publication.
     var title = S.toolsGetUrlPara("title") || "Sheet1"
     var apiKey = "AIzaSyBhECk4C1LpxI1mDJjSTwot-hRP2v3bwEA"
-    d3.json("https://sheets.googleapis.com/v4/spreadsheets/" + sheetId + "/values/"+ title +"!A:C?key=" + apiKey, function(error, d) { //TODO sheets
+    d3.json("https://sheets.googleapis.com/v4/spreadsheets/" + sheetId + "/values/"+ title +"!A:C?key=" + apiKey).then(function(error, d) { //TODO sheets
       var panels = d3.select("#layoutContainer")
         .selectAll(".panel")
         .data(d.values)
