--- a/app/tmpl/home.tmpl
+++ b/app/tmpl/home.tmpl
@@ -49,6 +49,12 @@
         .on("click", function(d, i) {
           window.location = "/v1/main.html?config=/sheet?idx=" + (i + 1);
         })
+        .on("mouseover",function(){
+          d3.select(this).style("background-color","#456789")
+        })
+        .on("mouseout",function(){
+          d3.select(this).style("background-color","#F5F5F5")
+        })
       var bodys = panels.append("div")
         .classed("panel-body", true)
       bodys.append("div").text(function(d) {
