fix home.html to v5

--- a/app/tmpl/home.tmpl
+++ b/app/tmpl/home.tmpl
@@ -50,7 +50,7 @@
           window.location = "/v1/main.html?config=/sheet?idx=" + (i + 1);
         })
         .on("mouseover",function(){
-          d3.select(this).style("background-color","#456789")
+          d3.select(this).style("background-color","#8899AA")
         })
         .on("mouseout",function(){
           d3.select(this).style("background-color","#F5F5F5")
