fix firefox height

--- a/app/templates/wrapper.tmpl
+++ b/app/templates/wrapper.tmpl
@@ -1,5 +1,5 @@
 {{define "wrapper"}}
-<div id="wrapper">
+<div id="wrapper" style="height:calc(100%-20px)">
   <div id="menuContainer" style="display:none"></div>
   <div id="layoutContainer" style="left:0%;width:100%"></div>
 </div>
