--- a/app/tmpl/main.tmpl
+++ b/app/tmpl/main.tmpl
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="{{.}}"> {{end}}
 </head>
 
-<body>
+<body style="height:100%">
   {{template "menu"}} {{template "wrapper"}} {{ template "modal"}} {{ template "modalLoad"}} {{ template "modalSave"}} {{ template "modalPrompt"}}
 </body>
 <script>
