improve pub and home

--- a/app/tmpl/home.tmpl
+++ b/app/tmpl/home.tmpl
@@ -10,7 +10,7 @@
   <style>
     .panel {
       width: 168px;
-      height: 200px;
+      min-height: 200px;
       float: left;
       margin: 10px;
     }
