--- a/app/templates/menu.tmpl
+++ b/app/templates/menu.tmpl
@@ -25,7 +25,7 @@
     </li>
     <li style="display:none"><span id="fixedToggle" class="glyphicon glyphicon-pushpin" title="hide panel header"></li>
   </ul>
-  <ul id="myNavRight">
+  <ul id="myNavLeft2">
     <!--
     <span class="split"></span>
   -->
@@ -54,6 +54,11 @@
       </ul>
     </div>
 </li>
+</ul>
+<ul id="myNavRight" style="float:right">
+  <li id="logo">
+    <image src="/static/image/icon.png" style="height:18px;width:18px;margin:7px 4px"></image>
+  </li>
 </ul>
 </div>
 </nav>
