--- a/app/templates/menu.tmpl
+++ b/app/templates/menu.tmpl
@@ -57,7 +57,7 @@
 </ul>
 <ul id="myNavRight" style="float:right">
   <li id="logo">
-    <image src="/static/image/icon.png" style="height:18px;width:18px;margin:7px 4px"></image>
+      <image src="/static/image/icon.png" style="height:18px;width:18px;margin:7px 4px"></image><span id="appinfo" style="color:#777"></span>
   </li>
 </ul>
 </div>
