--- a/app/tmpl/home.tmpl
+++ b/app/tmpl/home.tmpl
@@ -8,12 +8,15 @@
   {{template "css"}}
   <link rel="stylesheet" href="/web/style/sand.base.css">
   <style>
-    .panel {
-      width: 168px;
-      min-height: 200px;
-      float: left;
-      margin: 10px;
-    }
+  .panel {
+    width: 300px;
+    min-height: 200px;
+    float: left;
+    margin: 10px;
+  }
+  #layoutContainer {
+    overflow-y:scroll;
+  }
   </style>
 </head>
 
@@ -29,7 +32,7 @@
     var stateId = "cnb000"
     var links = []
     var sandInits = {credentials:"same-origin"}
-    d3.json("/sheetlist",sandInits).then(function(d) { //TODO sheets
+    d3.json("/sheetlist",sandInits).then(function(d,i0) { //TODO sheets
       console.log(d)
       var panels = d3.select("#layoutContainer")
         .selectAll(".panel")
@@ -43,8 +46,6 @@
         .append("h2")
         .classed("panel-title", true)
         .text(function(d) {
-
-
           return d[0]
         })
         .on("click", function(d, i) {
@@ -56,26 +57,37 @@
         .on("mouseout",function(){
           d3.select(this).style("background-color","#F5F5F5")
         })
-      var bodys = panels.append("div")
-        .classed("panel-body", true)
-      bodys.append("div").text(function(d) {
-        console.log(JSON.parse(JSON.parse(d[2])[-1]))
-        return d[1]
-      })
+        var bodys = panels.append("div")
+          .classed("panel-body", true)
+        bodys.append("div").append("h4").text("Description")
+        bodys.append("div").style("overflow-wrap","break-word")
+        //.style("background-color","#fffbea")
+        .style("padding","5px").text(function(d) {
+          return d[1]
+        })
+
       var _render = function(el) {
         el.each(function(d) {
-          var svg = d3.select(this).append("svg").attr("width", 134).attr("height", 80)
-          console.log(d)
-          var iconRender = S.layoutIcon()
+          var svg = d3.select(this).append("svg").attr("width",250).attr("height", 150)
+          //console.log(d)
+          var iconRender = S.layoutIcon().xscale(2.50).yscale(1.68)
           var dmain = JSON.parse(JSON.parse(d[2])[-1])
           svg.datum(dmain).call(iconRender)
         })
       }
-      var svgdiv = bodys.append("div")
-
+      bodys.append("div").append("h4").text("Layout")
+      var svgdiv = bodys.append("div").style("padding-bottom","10px")
+      var btnGrp = bodys.append("div").append("span").style("float","right").style("padding-right","25px")
+      btnGrp.append("button")
+          .classed("btn", true)
+          .classed("btn-success", true)
+          .classed("btn-sm", true)
+          .on("click",function(d,i){
+            window.open("/v1/main.html?config=/sheet?idx=" + (i + 1))
+          })
+          .text("open")
 
       svgdiv.call(_render)
-
 
 
 
