add form to home

--- a/app/templates/menu.tmpl
+++ b/app/templates/menu.tmpl
@@ -6,7 +6,7 @@
       <span class='glyphicon glyphicon-cog'></span>
     </li>
   -->
-    <li id="home"><span class="glyphicon glyphicon-home" title="home"></span>Home</li>
+    <li id="home"  title="home"><span class="glyphicon glyphicon-home"></span>Home</li>
     <!--
     <span class="split"></span>
   -->
@@ -23,14 +23,14 @@
         Welcome! Click me to begin!
       </div>
     </li>
-    <li style="display:none"><span id="fixedToggle" class="glyphicon glyphicon-pushpin" title="hide panel header"></li>
+    <li style="display:none"  title="hide panel header"><span id="fixedToggle" class="glyphicon glyphicon-pushpin"></li>
   </ul>
   <ul id="myNavLeft2">
     <!--
     <span class="split"></span>
   -->
-      <li id="sessions">
-        <span class="glyphicon glyphicon-hdd" title="Sessions" id="sessionUi"></span>Session
+      <li id="sessions"  title="Manage Sessions">
+        <span class="glyphicon glyphicon-hdd" id="sessionUi"></span>Session
         <div class="frame">
           <ul>
             <li id="share" title="Share session by generated URL"><span class="glyphicon glyphicon-share-alt" title="share session"></span> Share Session </li>
@@ -61,5 +61,4 @@
   </li>
 </ul>
 </div>
-</nav>
 {{end}}
